fix: Avoid gas results card overflow

--- a/src/staticfiles/styles/project_styles.less
+++ b/src/staticfiles/styles/project_styles.less
@@ -109,10 +109,11 @@
 
                             &.horario {
                                 height: 3rem;
+
+                                overflow: hidden;
+                                text-overflow: ellipsis;
                             }
                         }
-
-
 
                         .price-chart {
                             padding: 0 5px;
